--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,11 @@
 cryptography==3.4.7
-Flask==2.0.2
+Flask==2.0.3
 Flask_RESTful==0.3.9
+Jinja2==3.1.1
+MarkupSafe==2.0.1
 jinjasql==0.1.8
 pandas==1.0.1
 psycopg2==2.7.7
+itsdangerous==2.1.2
+click==8.0.4
+Werkzeug==2.0.3
