Add setup.cfg paths

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,14 @@
 [tool:pytest]
-addopts= --cov=/ --cov-fail-under=0 tests/ -p no:warnings
+addopts= --cov=. --cov-fail-under=80 tests/ -p no:warnings
 python_files=test_*.py
+
+[aliases]
+test=pytest
+
+[coverage:run]
+branch = True
+
+[coverage:paths]
+ada =
+    ada/
+    tests/
