--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -26,7 +26,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install flake8 pytest==5.3.5
+        pip install flake8 pytest-cov=="2.10.1" pytest-mock=="3.3.1" pytest-freezegun=="0.4.2" pytest=="5.3.5"
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Lint with flake8
       run: |
